Add capability to perform a state coordinate transformation on observability matrix or Fisher information matrix

--- a/examples/mono_camera_example.ipynb
+++ b/examples/mono_camera_example.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:47.469311Z",
-     "start_time": "2025-03-10T02:19:47.036495Z"
+     "end_time": "2025-03-10T19:06:10.689860Z",
+     "start_time": "2025-03-10T19:06:09.495879Z"
     }
    },
    "cell_type": "code",
@@ -16,7 +16,7 @@
    ],
    "id": "f1902de9ebff5a59",
    "outputs": [],
-   "execution_count": 177
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -62,8 +62,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:47.516314Z",
-     "start_time": "2025-03-10T02:19:47.470304Z"
+     "end_time": "2025-03-10T19:06:10.705464Z",
+     "start_time": "2025-03-10T19:06:10.692951Z"
     }
    },
    "cell_type": "code",
@@ -88,7 +88,7 @@
    ],
    "id": "afa5cf8d9cf2a145",
    "outputs": [],
-   "execution_count": 178
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -104,8 +104,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:47.564323Z",
-     "start_time": "2025-03-10T02:19:47.517313Z"
+     "end_time": "2025-03-10T19:06:10.767040Z",
+     "start_time": "2025-03-10T19:06:10.752172Z"
     }
    },
    "cell_type": "code",
@@ -126,7 +126,7 @@
    ],
    "id": "fd93d3dbf5535e4b",
    "outputs": [],
-   "execution_count": 179
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -137,15 +137,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:47.611231Z",
-     "start_time": "2025-03-10T02:19:47.565318Z"
+     "end_time": "2025-03-10T19:06:10.798591Z",
+     "start_time": "2025-03-10T19:06:10.784080Z"
     }
    },
    "cell_type": "code",
    "source": "dt = 0.01  # [s]",
    "id": "af1c2296132affea",
    "outputs": [],
-   "execution_count": 180
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -159,8 +159,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:47.673751Z",
-     "start_time": "2025-03-10T02:19:47.613230Z"
+     "end_time": "2025-03-10T19:06:10.830123Z",
+     "start_time": "2025-03-10T19:06:10.815606Z"
     }
    },
    "cell_type": "code",
@@ -172,7 +172,7 @@
    ],
    "id": "a2ba514ec911b5e9",
    "outputs": [],
-   "execution_count": 181
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -193,8 +193,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:47.721760Z",
-     "start_time": "2025-03-10T02:19:47.674760Z"
+     "end_time": "2025-03-10T19:06:10.876787Z",
+     "start_time": "2025-03-10T19:06:10.862022Z"
     }
    },
    "cell_type": "code",
@@ -206,13 +206,13 @@
    ],
    "id": "27615e7f576460b1",
    "outputs": [],
-   "execution_count": 182
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:47.766761Z",
-     "start_time": "2025-03-10T02:19:47.722759Z"
+     "end_time": "2025-03-10T19:06:10.892345Z",
+     "start_time": "2025-03-10T19:06:10.879780Z"
     }
    },
    "cell_type": "code",
@@ -222,13 +222,13 @@
    ],
    "id": "b3f38c2b2abb7d4",
    "outputs": [],
-   "execution_count": 183
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:47.814269Z",
-     "start_time": "2025-03-10T02:19:47.767761Z"
+     "end_time": "2025-03-10T19:06:10.923889Z",
+     "start_time": "2025-03-10T19:06:10.908866Z"
     }
    },
    "cell_type": "code",
@@ -244,13 +244,13 @@
    ],
    "id": "3d640e58a4edcf04",
    "outputs": [],
-   "execution_count": 184
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:50.699054Z",
-     "start_time": "2025-03-10T02:19:47.815267Z"
+     "end_time": "2025-03-10T19:06:13.850748Z",
+     "start_time": "2025-03-10T19:06:10.940829Z"
     }
    },
    "cell_type": "code",
@@ -260,13 +260,13 @@
    ],
    "id": "aab7f05cfefe0956",
    "outputs": [],
-   "execution_count": 185
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:50.858574Z",
-     "start_time": "2025-03-10T02:19:50.700057Z"
+     "end_time": "2025-03-10T19:06:14.036733Z",
+     "start_time": "2025-03-10T19:06:13.867322Z"
     }
    },
    "cell_type": "code",
@@ -287,13 +287,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 186
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:50.954078Z",
-     "start_time": "2025-03-10T02:19:50.859568Z"
+     "end_time": "2025-03-10T19:06:14.113395Z",
+     "start_time": "2025-03-10T19:06:14.053273Z"
     }
    },
    "cell_type": "code",
@@ -314,13 +314,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 187
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:51.048586Z",
-     "start_time": "2025-03-10T02:19:50.954078Z"
+     "end_time": "2025-03-10T19:06:14.189795Z",
+     "start_time": "2025-03-10T19:06:14.129039Z"
     }
    },
    "cell_type": "code",
@@ -341,7 +341,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 188
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -352,21 +352,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:51.095098Z",
-     "start_time": "2025-03-10T02:19:51.048586Z"
+     "end_time": "2025-03-10T19:06:14.220855Z",
+     "start_time": "2025-03-10T19:06:14.206323Z"
     }
    },
    "cell_type": "code",
    "source": "use_open_loop = True  # set to False to use the MPC state trajectory above, or True to use the open-loop inputs below",
    "id": "506a86af4c7ee06b",
    "outputs": [],
-   "execution_count": 189
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:51.350114Z",
-     "start_time": "2025-03-10T02:19:51.097093Z"
+     "end_time": "2025-03-10T19:06:14.469815Z",
+     "start_time": "2025-03-10T19:06:14.237438Z"
     }
    },
    "cell_type": "code",
@@ -374,33 +374,33 @@
     "if use_open_loop:\n",
     "    # Set initial state\n",
     "    x0 = {'g': 2.0, 'd': 3.0}\n",
-    "    \n",
+    "\n",
     "    # Set open-loop inputs directly\n",
     "    tsim1 = np.arange(0, 3, step=dt)\n",
     "    tsim2 = np.arange(3, 6, step=dt)\n",
     "    tsim3 = np.arange(6, 9, step=dt)\n",
     "    tsim = np.hstack((tsim1, tsim2, tsim3))\n",
-    "    \n",
+    "\n",
     "    u1 = np.sin(3*tsim1)\n",
     "    u2 = 1e-5*np.sin(3*tsim2)\n",
     "    u3 = np.sin(3*tsim3)\n",
     "    u = np.hstack((u1, u2, u3))\n",
-    "    \n",
+    "\n",
     "    # Can also set as dict\n",
     "    u = dict(u=u)\n",
-    "    \n",
+    "\n",
     "    # Run simulation using open-loop inputs\n",
     "    t_sim, x_sim, u_sim, y_sim = simulator.simulate(x0=x0, u=u, return_full_output=True)\n"
    ],
    "id": "65fe013fd3e27a7d",
    "outputs": [],
-   "execution_count": 190
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:51.491491Z",
-     "start_time": "2025-03-10T02:19:51.351110Z"
+     "end_time": "2025-03-10T19:06:14.579641Z",
+     "start_time": "2025-03-10T19:06:14.486693Z"
     }
    },
    "cell_type": "code",
@@ -421,13 +421,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 191
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:51.586003Z",
-     "start_time": "2025-03-10T02:19:51.492491Z"
+     "end_time": "2025-03-10T19:06:14.657265Z",
+     "start_time": "2025-03-10T19:06:14.596645Z"
     }
    },
    "cell_type": "code",
@@ -448,13 +448,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 192
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:51.680583Z",
-     "start_time": "2025-03-10T02:19:51.587003Z"
+     "end_time": "2025-03-10T19:06:14.735453Z",
+     "start_time": "2025-03-10T19:06:14.673736Z"
     }
    },
    "cell_type": "code",
@@ -475,7 +475,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 193
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -492,21 +492,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:51.728590Z",
-     "start_time": "2025-03-10T02:19:51.681584Z"
+     "end_time": "2025-03-10T19:06:14.766578Z",
+     "start_time": "2025-03-10T19:06:14.751960Z"
     }
    },
    "cell_type": "code",
    "source": "w = 6  # window size, set to None to use entire time-series as one window",
    "id": "1816060219c9f891",
    "outputs": [],
-   "execution_count": 194
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:59.055724Z",
-     "start_time": "2025-03-10T02:19:51.729584Z"
+     "end_time": "2025-03-10T19:06:23.289292Z",
+     "start_time": "2025-03-10T19:06:14.783332Z"
     }
    },
    "cell_type": "code",
@@ -516,13 +516,13 @@
    ],
    "id": "6d3208ab8cebb1f8",
    "outputs": [],
-   "execution_count": 195
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:59.103538Z",
-     "start_time": "2025-03-10T02:19:59.056725Z"
+     "end_time": "2025-03-10T19:06:23.320623Z",
+     "start_time": "2025-03-10T19:06:23.305517Z"
     }
    },
    "cell_type": "code",
@@ -532,13 +532,13 @@
    ],
    "id": "2ea89c4c3fdd5747",
    "outputs": [],
-   "execution_count": 196
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:59.151174Z",
-     "start_time": "2025-03-10T02:19:59.104531Z"
+     "end_time": "2025-03-10T19:06:23.367301Z",
+     "start_time": "2025-03-10T19:06:23.352814Z"
     }
    },
    "cell_type": "code",
@@ -556,13 +556,13 @@
      ]
     }
    ],
-   "execution_count": 197
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:59.276753Z",
-     "start_time": "2025-03-10T02:19:59.152167Z"
+     "end_time": "2025-03-10T19:06:23.524370Z",
+     "start_time": "2025-03-10T19:06:23.384297Z"
     }
    },
    "cell_type": "code",
@@ -584,7 +584,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 198
+   "execution_count": 22
   },
   {
    "metadata": {},
@@ -595,8 +595,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:59.324038Z",
-     "start_time": "2025-03-10T02:19:59.277746Z"
+     "end_time": "2025-03-10T19:06:23.570293Z",
+     "start_time": "2025-03-10T19:06:23.555797Z"
     }
    },
    "cell_type": "code",
@@ -606,13 +606,13 @@
    ],
    "id": "451fd6cf6383e439",
    "outputs": [],
-   "execution_count": 199
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:59.371411Z",
-     "start_time": "2025-03-10T02:19:59.324038Z"
+     "end_time": "2025-03-10T19:06:23.617120Z",
+     "start_time": "2025-03-10T19:06:23.602808Z"
     }
    },
    "cell_type": "code",
@@ -626,13 +626,13 @@
    ],
    "id": "9aaaf5056bf75fed",
    "outputs": [],
-   "execution_count": 200
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:59.418341Z",
-     "start_time": "2025-03-10T02:19:59.372441Z"
+     "end_time": "2025-03-10T19:06:23.663577Z",
+     "start_time": "2025-03-10T19:06:23.649563Z"
     }
    },
    "cell_type": "code",
@@ -689,12 +689,12 @@
        "</div>"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 201
+   "execution_count": 25
   },
   {
    "metadata": {},
@@ -705,8 +705,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:19:59.465617Z",
-     "start_time": "2025-03-10T02:19:59.419272Z"
+     "end_time": "2025-03-10T19:06:23.740957Z",
+     "start_time": "2025-03-10T19:06:23.727449Z"
     }
    },
    "cell_type": "code",
@@ -723,13 +723,13 @@
    ],
    "id": "94b30b60ed5543e9",
    "outputs": [],
-   "execution_count": 202
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:20:00.971043Z",
-     "start_time": "2025-03-10T02:19:59.466620Z"
+     "end_time": "2025-03-10T19:06:25.320965Z",
+     "start_time": "2025-03-10T19:06:23.774060Z"
     }
    },
    "cell_type": "code",
@@ -740,13 +740,13 @@
    ],
    "id": "b77d1363934e9933",
    "outputs": [],
-   "execution_count": 203
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:20:01.018312Z",
-     "start_time": "2025-03-10T02:20:00.972036Z"
+     "end_time": "2025-03-10T19:06:25.336493Z",
+     "start_time": "2025-03-10T19:06:25.323988Z"
     }
    },
    "cell_type": "code",
@@ -756,7 +756,7 @@
    ],
    "id": "bf67c35cfee44ceb",
    "outputs": [],
-   "execution_count": 204
+   "execution_count": 28
   },
   {
    "metadata": {},
@@ -767,21 +767,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:20:01.066321Z",
-     "start_time": "2025-03-10T02:20:01.018312Z"
+     "end_time": "2025-03-10T19:06:25.383580Z",
+     "start_time": "2025-03-10T19:06:25.368567Z"
     }
    },
    "cell_type": "code",
    "source": "EV_no_nan = EV_aligned.fillna(method='bfill').fillna(method='ffill')",
    "id": "331553b8964df341",
    "outputs": [],
-   "execution_count": 205
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:20:01.804587Z",
-     "start_time": "2025-03-10T02:20:01.067313Z"
+     "end_time": "2025-03-10T19:06:26.243059Z",
+     "start_time": "2025-03-10T19:06:25.415837Z"
     }
    },
    "cell_type": "code",
@@ -811,7 +811,7 @@
     "                        ticks=np.logspace(log_tick_low, log_tick_high, log_tick_high-log_tick_low + 1))\n",
     "    cbar.set_label('min. EV: ' + state_name, rotation=270, fontsize=7, labelpad=8)\n",
     "    cbar.ax.tick_params(labelsize=6)\n",
-    "    \n",
+    "\n",
     "    x_max = np.max(x_sim[state_name])\n",
     "    x_min = np.min(x_sim[state_name])\n",
     "\n",
@@ -837,10 +837,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<matplotlib.colors.LogNorm object at 0x0000028A17375E80>\n",
-      "<matplotlib.colors.LogNorm object at 0x0000028A17375E80>\n",
-      "<matplotlib.colors.LogNorm object at 0x0000028A17375E80>\n",
-      "<matplotlib.colors.LogNorm object at 0x0000028A17375E80>\n"
+      "<matplotlib.colors.LogNorm object at 0x000001FB91BE43A0>\n",
+      "<matplotlib.colors.LogNorm object at 0x000001FB91BE43A0>\n",
+      "<matplotlib.colors.LogNorm object at 0x000001FB91BE43A0>\n",
+      "<matplotlib.colors.LogNorm object at 0x000001FB91BE43A0>\n"
      ]
     },
     {
@@ -854,20 +854,20 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 206
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-10T02:20:01.820607Z",
-     "start_time": "2025-03-10T02:20:01.804587Z"
+     "end_time": "2025-03-10T19:06:26.289202Z",
+     "start_time": "2025-03-10T19:06:26.274993Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "2a64b673654ad7a4",
    "outputs": [],
-   "execution_count": 206
+   "execution_count": null
   }
  ],
  "metadata": {
